# db-integration-with-fast-api

./: Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: terraform-workflow.yml
migrations/: env.py
migrations/versions/: 2fb0f1f4fc85_add_item_and_user_column.py  8443e3542c60_add_item_and_user_column.py  f3f680501128_add_item_and_user_column2.py  fc6fabbe68f5_add_item_and_user_column.py
sql_app/: database.py  models.py
