[tool.poetry]
name = "test-db-with-fast-api"
version = "1.0.0"
description = ""
authors = []


[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.20.0"
pydantic = "^1.9.2"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]
SQLAlchemy = "^1.4.41"
fastapi = "^0.86.0"
alembic = "^1.8.1"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
